# KIZAK

./: .env.example  .gitignore  .ignore  KIZAK_prod.session.sql  README.md  docker-compose.yml  package-lock.json  vector_search.py
.github/workflows/: actionlint.yml  deploy.yml  docker-compose-check.yml  dockerLint.yml  pythonApplication.yml  test.yml  ty.yml  typos.yml  yamlint.yml
back/: Dockerfile  app.py  config.py  pyproject.toml
back/app/: __init__.py  api.py
back/app/db/: connect.py
back/app/routes/: cv.py  homepage.py  roadmap.py  user.py
back/db/: db_connector.py  feedback.py  resource.py  roadmap.py  user.py
back/docs/: app.md
back/mail/: mail.py
back/models/: auth.py  feedback.py  mail.py  resource.py  roadmap.py  user.py
back/routers/: auth.py  feedback.py  mail.py  resource.py  roadmap.py  user.py  utils.py
back/services/: course_scrapper.py  courses_generator.py  ranker.py  roadmap_genaretor.py  roamap_generator.py  skill_gap.py  vector_search.py
back/tests/: conftest.py  resource.py  test_link.py  test_node.py  test_resource.py  test_roadmap.py  test_user.py
back/utils/: conf.py  job_skill.json  security.py
db/: ScrapCourseEra.py  ScrapStepik.py  classcentral_search.html  course_detail.html  courses(2).csv  courses_final.csv  db_populate.py  init.sql  scrap.py  scrape_classcentral.py
db/courses/: README.md  coursera_clear.json  coursera_py.json  scrap.py  stepik_clear.json  stepik_py.json  t.ipynb
docs/: README.md  auth.md  docs.html  feedback.md  links.md  mail.md  nodes.md  resources.md  roadmaps.md  users.md  utils.md
front/: Dockerfile  index.html  package-lock.json  package.json
ml/: Dockerfile  README.md  __init_main__.py  app.py  auto_preprocessing.ipynb  course_recommender.py  course_skills_normalization.ipynb  courses.csv  courses1.csv  courses_final.csv  courses_normalized_skills.csv  embedding_generator.ipynb  job_skill.json  jv_mapping.ipynb  models.py  pyproject.toml  ranker.py  reverse_skill_map.json  skill_mapping.json  skipGapAnalyzer.py  vector_search.py
ml/vacancies-skills_datasets/: IT_vacancies_full.csv  en.csv  jobs_all.csv  ru.csv
(+77 files in other folders)
