[tool.poetry]
name = "kizak"
version = "0.0.1"
description = "KIZAK API MVP"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"
dotenv = "^0.9.9"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
