[tool.poetry]
name = "kizak"
version = "0.0.1"
description = "KIZAK API MVP"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"
dotenv = "^0.9.9"
asyncpg = "^0.30.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.21.0"
faker = "^23.0.0"
httpx = "^0.24.0"
pytest-cov = "^5.0.0"
bcrypt = "^4.1.2"
pyjwt = "^2.8.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.7"
requests = "^2.32.4"
fastapi-mail = "^1.4.1"
itsdangerous = "^2.1.2"
playwright = "^1.53.0"
bs4 = "^0.0.2"
aiohttp = "^3.12.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

